deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-deploy
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: kdobmayer/hellows:latest
        ports:
        - containerPort: 8080
