deploy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hellows-pod
spec:
  containers:
  - name: hellows-pod
    image: kdobmayer/hellows:latest
    ports:
    - containerPort: 8080
