deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hellows-service
spec:
  selector:
    app: hellows
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
