deploy/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: hello-ing
spec:
  rules:
  - host: hello.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
